@@ -39,7 +39,6 @@ import org.elasticsearch.monitor.fs.FsInfo;
 import org.elasticsearch.threadpool.ThreadPool;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -189,8 +188,8 @@ public class InternalClusterInfoService implements ClusterInfoService, ClusterSt
                             leastAvailableUsagesBuilder,
                             mostAvailableUsagesBuilder
                         );
-                        leastAvailableSpaceUsages = Collections.unmodifiableMap(leastAvailableUsagesBuilder);
-                        mostAvailableSpaceUsages = Collections.unmodifiableMap(mostAvailableUsagesBuilder);
+                        leastAvailableSpaceUsages = Map.copyOf(leastAvailableUsagesBuilder);
+                        mostAvailableSpaceUsages = Map.copyOf(mostAvailableUsagesBuilder);
                     }
 
                     @Override
@@ -265,10 +264,10 @@ public class InternalClusterInfoService implements ClusterInfoService, ClusterSt
                         reservedSpaceBuilders.forEach((nodeAndPath, builder) -> rsrvdSpace.put(nodeAndPath, builder.build()));
 
                         indicesStatsSummary = new IndicesStatsSummary(
-                            Collections.unmodifiableMap(shardSizeByIdentifierBuilder),
-                            Collections.unmodifiableMap(shardDataSetSizeBuilder),
-                            Collections.unmodifiableMap(dataPathByShardRoutingBuilder),
-                            Collections.unmodifiableMap(rsrvdSpace)
+                            Map.copyOf(shardSizeByIdentifierBuilder),
+                            Map.copyOf(shardDataSetSizeBuilder),
+                            Map.copyOf(dataPathByShardRoutingBuilder),
+                            Map.copyOf(rsrvdSpace)
                         );
                     }
 
